[gd_scene load_steps=4 format=3 uid="uid://ed0jxhtmmyjx"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_2xt0g"]
[ext_resource type="Texture2D" uid="uid://cxhijhhbftmvl" path="res://art/dungeon background 7.png" id="2_xw8ov"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jaqta"]
bg_color = Color(1, 0.843137, 0.52549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xt0g")

[node name="DungeonBackground7" type="Sprite2D" parent="."]
position = Vector2(997, 512)
scale = Vector2(1.29427, 1)
texture = ExtResource("2_xw8ov")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -123.0
offset_right = 278.0
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jaqta")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jaqta")
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jaqta")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jaqta")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
